# SmolVLA-INFERENCE

./: run_client.sh  run_server.sh
examples/e6/: config_orange.yaml  config_orange_7d_expert.yaml  config_orange_7d_lora.yaml  run_smolvla_client.py  run_smolvla_client_7d.py
hardware/: camera_capture.py
hardware/MvImport/: MvCameraControl_class.py
hardware/dobot/: dobot_api.py
hardware/utils/: dump_obs_once.py  test_robot_connection.py
ros2/: .gitignore
ros2/src/e6_description/: CMakeLists.txt  package.xml
ros2/src/e6_description/e6_description/: joint_state_bridge_node.py
ros2/src/e6_description/launch/: display_me6.launch.py
ros2/src/e6_description/urdf/: me6_robot.xacro
ros2/src/e6_vla_ros/: package.xml  setup.cfg  setup.py
ros2/src/e6_vla_ros/e6_vla_ros/: camera_state_node.py  e6_visualization_node.py  executor_supervisor_node.py  inference_bridge_node.py  smolvla_bridge_7d_node.py  smolvla_bridge_node.py  task_node.py  voice_command_node.py
ros2/src/e6_vla_ros/launch/: e6_vla.launch.py  smolvla.launch.py  smolvla_7d_expert.launch.py  smolvla_7d_lora.launch.py
ros2/src/xarm_ros2/: ReadMe.md  ReadMe_cn.md
ros2/src/xarm_ros2/demo/mbot_demo/: package.xml  readme.md
ros2/src/xarm_ros2/uf_ros_lib/uf_ros_lib/: moveit_configs_builder.py
ros2/src/xarm_ros2/xarm_api/: ReadMe.md
ros2/src/xarm_ros2/xarm_api/config/: xarm_params.yaml
ros2/src/xarm_ros2/xarm_api/src/: xarm_driver.cpp  xarm_driver_service.cpp
ros2/src/xarm_ros2/xarm_gazebo/worlds/: table_gz.world
scripts/: run_client_7d_expert.sh  run_client_7d_lora.sh  run_server_7d_expert.sh  run_server_7d_lora.sh  serve_policy.py  serve_policy_smolvla.py  serve_policy_smolvla_7d.py
(+27 files in other folders)
