<?xml version="1.0"?>
<package format="3">
  <name>e6_vla_ros</name>
  <version>0.1.0</version>
  <description>E6-VLA ROS2 inference pipeline — camera, inference, executor, task</description>
  <maintainer email="todo@todo.com">billy</maintainer>
  <license>Apache-2.0</license>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
